tests/snapshots/test_runner__tests__compiler__typecheck__innate_function_1__foo.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  innate int_add "hello world" .print
  //             ^^^^^^^^^^^^^ Expected (Int, Int), got String

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/innate_function_1/foo.kk:2:18
  │
2 │   innate int_add "hello world" .print
  │                  ^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - (           | + String    |
    | -   Int,      |             |
    | -   Int       |             |
    | - )           |             |
    +---------------+-------------+
